 (Format: Year/Month/Day)
Changes for 1.0.1:
*07/10/23:
   * Adding/removing workspaces wasn't updating menu (Mark)
     Screen.cc
   * Support remembering maximized, minimized, and fullscreen state (Mark)
     - [Maximized] {yes|no|horz|vert}
     - [Minimized] {yes|no}
     - [Fullscreen] {yes|no}
     - also fixed window placement when remembering head but not position
     Window.cc/hh Remember.cc/hh Screen.cc/hh Ewmh.cc fluxbox-nls.hh
     CurrentWindowCmd.cc
   * Allow negated patterns, e.g. (name!=xterm) (Mark)
     ClientPattern.cc/hh
*07/10/22:
   * Added option "mouse" to client pattern ( Henrik )
     This is usefull for xinerama. For example:
     Mod1 Tab :NextWindow (head=[mouse]) 
     This will cycle focus through windows that are on the same head as 
     the mouse pointer.
     ClientPattern.cc
   * Fixed crash bug at restart. ( Henrik )
     Window.cc
   * Replaced modKey with new commands StartMoving and StartResizing (Mark)
     - your keys file should be updated automatically
     - they must be used with a mouse button, or they won't work
     - StartResizing takes one or none of the following arguments:
       NearestCorner, Center, TopLeft, TopRight, BottomLeft, BottomRight
     Window.cc/hh CurrentWindowCmd.cc/hh FbCommandFactory.cc Screen.cc/hh
     fluxbox.cc/hh ScreenResources.cc FbCommands.cc/hh
     util/fluxbox-update_configs.cc
*07/10/21:
   * Allow decorations bitmask to be specified using '0x' (Mark)
     Window.cc
*07/10/18:
   * Fixed gcc 2.96 compile problem ( Thanks rumpole at hotmail )
     bug #1809786
     src/FbTk/TextBox.cc
*07/10/15:
   * Added OnWindow modifier to keys file (Mark)
     Keys.cc Window.cc Screen.cc CurrentWindowCmd.cc
*07/10/14:
   * Added support for transient windows in window patterns, e.g.
     (transient=yes|no), defaulting to "no" for the apps file (Mark)
     Remember.cc ClientPattern.cc/hh Focusable.hh Window.cc/hh
   * Bugfix for SendToPrevWorkspace/TakeToPrevWorkspace (Mathias)